api 80% tugadi
